<resources>
    <string name="app_name">ChallengeZero12</string>
    <string name="user_action_required">Toccare lo schermo per iniziare/riprendere il gioco</string>
    <string name="punteggio">Punteggio:</string>
    <string name="vite">Vite:</string>
    <string name="punteggio_dialog">Punteggio</string>
    <string name="nome">Nome</string>
    <string name="invio">Invio</string>
    <string name="invio_successo">Invio avvenuto con successo</string>
    <string name="messaggio_mancato_inserimento_nome">E\' richiesto l\'inserimento del campo nome per poter procedere</string>
    <string name="errore_mancato_inserimento_name">Si è pregati di inserire il valore name per poter procedere.</string>
    <string name="testo_edit_dialog">Inserisci il nome</string>
    <string name="titolo_dialog_back_button">Richiesta conferma</string>
    <string name="messaggio_dialog_back_button">Sei sicuro di voler terminare la partita in corso? Operazione irreversibile.</string>
    <string name="si">SI</string>
    <string name="no">NO</string>
    <string name="fine_partita">PARTITA TERMINATA</string>
    <string name="avvia_partita">Avvia la partita</string>
    <string name="classifica">Classifica</string>
    <string name="benvenuto">BENVENUTO</string>
</resources>
